k8s-resources/rockergaming-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rockergaming-api
  namespace: rockergaming
spec:
  selector:
    app: rockergaming-api
  ports:
  - name: http
    targetPort: 80
    port: 80
