k8s-resources/rockergaming-api/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rockergaming-api
  namespace: rockergaming
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.api.dev.lab.rockergaming.com`)
      kind: Rule
      services:
        - name: rockergaming-api
          port: 80
          namespace: rockergaming
    - match: Host(`api.dev.lab.rockergaming.com`)
      kind: Rule
      services:
        - name: rockergaming-api
          port: 80
          namespace: rockergaming
  tls:
    secretName: lab-rockergaming-com-tls
